--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- https://startbootstrap.com/templates/heroic-features/ -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -55,7 +57,7 @@
     <header class="jumbotron my-4">
       <h1 class="display-3">A Warm Welcome!</h1>
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
-      <a href="test.html" class="btn btn-primary btn-lg">Call to action!</a>
+      <a href="test/test.html" class="btn btn-primary btn-lg">Call to action!</a>
     </header>
 
     <!-- Page Features -->
