--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="tele/tele.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
