--- a/tele/tele.html
+++ b/tele/tele.html
@@ -27,17 +27,7 @@
 </nav>
 
 <header>
-  <style>
-    .carousel-item {
-      height: 65vh;
-      min-height: 350px;
-      background: no-repeat center center scroll;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
