--- a/tele/tele.html
+++ b/tele/tele.html
@@ -27,7 +27,7 @@
 </nav>
 
 <header>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="carouselExampleIndicators" href="styles.css">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
