--- a/tele/tele.html
+++ b/tele/tele.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      .carousel-item {
+        height: 65vh;
+        min-height: 350px;
+        background: no-repeat center center scroll;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
+    </style>
+  </head>
+<body>
+
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
@@ -27,7 +44,6 @@
 </nav>
 
 <header>
-  <link rel="carouselExampleIndicators" href="styles.css">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
