--- a/tele/tele.html
+++ b/tele/tele.html
@@ -13,8 +13,8 @@
       }
     </style>
   </head>
+  
 <body>
-
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
@@ -91,3 +91,6 @@
     <p class="lead">The background images for the slider are set directly in the HTML using inline CSS. The images in this snippet are from <a href="https://unsplash.com">Unsplash</a>!</p>
   </div>
 </section>
+
+</body>
+</html>
