--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="column">
     <div class="content">
       <img src="mountains.jpg" alt="Mountains" style="width:100%">
-      <h3>My Work</h3>
+      <h3 href="http://www.google.com">Link to Google My Work</h3>
       <p>Lorem ipsum..</p>
     </div>
   </div>
@@ -50,36 +50,6 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="column">
-    <div class="content">
-      <img src="mountains.jpg" alt="Mountains" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-      <img src="mountains.jpg" alt="Lights" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-      <img src="mountains.jpg" alt="Nature" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-  <div class="column">
-    <div class="content">
-      <img src="mountains.jpg" alt="Mountains" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
-    </div>
-  </div>
-</div>
 
 
 <!-- END MAIN -->
