--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <div class="column">
     <div class="content">
       <img src="mountains.jpg" alt="Mountains" style="width:100%">
-      <h3 href="http://www.google.com">Link to Google My Work</h3>
+      <h3>My Work <a href="http://www.google.com">Link to Google</a></h3>
+      
       <p>Lorem ipsum..</p>
     </div>
   </div>
