--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
  <head>
   <title>This is my page title.</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="script.js"></script>
  </head>
  <body>
-  <h1>This is a heading 1 element</h1>
-  <p>Hello world, this is a simple paragraph.</p>
+  <h1>Chelsea Starr</h1>
+  <p>Objective Statement Objective Statement Objective Statement Objective Statement Objective Statement Objective Statement Objective Statement</p>
  </body>
 <html>
 
@@ -24,7 +25,7 @@
     <div class="content">
       <img src="mountains.jpg" alt="Mountains" style="width:100%">
       <h3>My Work <a href="http://www.google.com">Link to Google</a></h3>
-      
+
       <p>Lorem ipsum..</p>
     </div>
   </div>
