--- a/tele/tele.html
+++ b/tele/tele.html
@@ -60,7 +60,7 @@
       <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
     </div>
     <div class="column">
-      <img class="demo cursor" src="imountains.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
     </div>
     <div class="column">
       <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
