--- a/tele/tele.html
+++ b/tele/tele.html
@@ -126,7 +126,7 @@ img {
   <div class="mySlides">
     <div class="numbertext">5 / 6</div>
     <!-- <img src="mountains.jpg" style="width:100%"> -->
-    <iframe style="width:100%" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+    <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
   </div>
 
   <div class="mySlides">
