--- a/tele/tele.html
+++ b/tele/tele.html
@@ -125,8 +125,7 @@ img {
 
   <div class="mySlides">
     <div class="numbertext">5 / 6</div>
-    <!-- <img src="mountains.jpg" style="width:100%"> -->
-    <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+    <iframe style="height:100%"src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
   </div>
 
   <div class="mySlides">
