--- a/tele/tele.html
+++ b/tele/tele.html
@@ -125,7 +125,7 @@ img {
 
   <div class="mySlides">
     <div class="numbertext">5 / 6</div>
-    <iframe style="height:100%"src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+    <iframe style="width:100%" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
   </div>
 
   <div class="mySlides">
