--- a/tele/tele.html
+++ b/tele/tele.html
@@ -97,6 +97,8 @@ img {
 .demo:hover {
   opacity: 1;
 }
+
+
 </style>
 <body>
 
@@ -125,7 +127,10 @@ img {
 
   <div class="mySlides">
     <div class="numbertext">5 / 6</div>
-    <iframe style="width:100%" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+    <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+    video {
+    object-fit: fill;
+}
   </div>
 
   <div class="mySlides">
