--- a/tele/tele.html
+++ b/tele/tele.html
@@ -107,17 +107,17 @@ img {
 <div class="container">
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
-    <img src="mountains.jpg" style="width:100%">
+    <img src="team.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">2 / 6</div>
-    <img src="mountains.jpg" style="width:100%">
+    <img src="board.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
     <div class="numbertext">3 / 6</div>
-    <img src="mountains.jpg" style="width:100%">
+    <img src="main_footprint.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
@@ -144,13 +144,13 @@ img {
 
   <div class="row">
     <div class="column">
-      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+      <img class="demo cursor" src="team.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
     </div>
     <div class="column">
-      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+      <img class="demo cursor" src="board.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
     </div>
     <div class="column">
-      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      <img class="demo cursor" src="main_footprint.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
     </div>
     <div class="column">
       <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
