--- a/tele/tele.html
+++ b/tele/tele.html
@@ -106,32 +106,27 @@ img {
 
 <div class="container">
   <div class="mySlides">
-    <div class="numbertext">1 / 6</div>
+    <div class="numbertext">1 / 5</div>
     <img src="team.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">2 / 6</div>
+    <div class="numbertext">2 / 5</div>
     <img src="board.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">3 / 6</div>
+    <div class="numbertext">3 / 5</div>
     <img src="main_footprint.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">4 / 6</div>
+    <div class="numbertext">4 / 5</div>
     <img src="mountains.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">6 / 6</div>
-    <img src="mountains.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">5 / 6</div>
+    <div class="numbertext">5 / 5</div>
     <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
   </div>
 
@@ -144,23 +139,21 @@ img {
 
   <div class="row">
     <div class="column">
-      <img class="demo cursor" src="team.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+      <img class="demo cursor" src="team.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Team">
     </div>
     <div class="column">
-      <img class="demo cursor" src="board.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+      <img class="demo cursor" src="board.jpg" style="width:100%" onclick="currentSlide(2)" alt="The Board">
     </div>
     <div class="column">
-      <img class="demo cursor" src="main_footprint.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+      <img class="demo cursor" src="main_footprint.jpg" style="width:100%" onclick="currentSlide(3)" alt="The Footprint">
     </div>
     <div class="column">
-      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Enclosure">
     </div>
     <div class="column">
-      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(5)" alt="Skit and Explanation">
     </div>
-    <div class="column">
-      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
-    </div>
+
   </div>
 </div>
 
