--- a/tele/tele.html
+++ b/tele/tele.html
@@ -106,27 +106,32 @@ img {
 
 <div class="container">
   <div class="mySlides">
-    <div class="numbertext">1 / 5</div>
+    <div class="numbertext">1 / 6</div>
     <img src="team.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">2 / 5</div>
+    <div class="numbertext">2 / 6</div>
     <img src="board.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">3 / 5</div>
+    <div class="numbertext">3 / 6</div>
     <img src="main_footprint.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">4 / 5</div>
+    <div class="numbertext">4 / 6</div>
     <img src="mountains.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">5 / 5</div>
+    <div class="numbertext">5 / 6</div>
+    <img src="interface.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">5 / 6</div>
     <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
   </div>
 
@@ -151,7 +156,10 @@ img {
       <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Enclosure">
     </div>
     <div class="column">
-      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(5)" alt="Skit and Explanation">
+      <img class="demo cursor" src="interface.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Interface">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video (skit and explanation)">
     </div>
 
   </div>
