--- a/tele/tele.html
+++ b/tele/tele.html
@@ -153,10 +153,10 @@ img {
       <img class="demo cursor" src="main_footprint.jpg" style="width:100%" onclick="currentSlide(3)" alt="The Footprint">
     </div>
     <div class="column">
-      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Enclosure">
+      <img class="demo cursor" src="interface.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Interface">
     </div>
     <div class="column">
-      <img class="demo cursor" src="interface.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Interface">
+      <img class="demo cursor" src="http://i3.ytimg.com/vi/iOL94ST_2S4/maxresdefault.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Enclosure">
     </div>
     <div class="column">
       <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video (skit and explanation)">
