--- a/tele/tele.html
+++ b/tele/tele.html
@@ -127,7 +127,7 @@ img {
 
   <div class="mySlides">
     <div class="numbertext">5 / 6</div>
-    <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/iOL94ST_2S4""></iframe>
+    <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/iOL94ST_2S4"></iframe>
   </div>
 
   <div class="mySlides">
