--- a/tele/tele.html
+++ b/tele/tele.html
@@ -156,7 +156,7 @@ img {
       <img class="demo cursor" src="interface.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Interface">
     </div>
     <div class="column">
-      <img class="demo cursor" src="http://i3.ytimg.com/vi/iOL94ST_2S4/maxresdefault.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Enclosure">
+      <img class="demo cursor" src="enclosure_thumb.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Enclosure">
     </div>
     <div class="column">
       <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video (skit and explanation)">
