--- a/tele/tele.html
+++ b/tele/tele.html
@@ -122,7 +122,7 @@ img {
 
   <div class="mySlides">
     <div class="numbertext">4 / 6</div>
-    <img src="mountains.jpg" style="width:100%">
+    <img src="Interface.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
