--- a/tele/tele.html
+++ b/tele/tele.html
@@ -5,7 +5,9 @@
 body {
   font-family: Arial;
   margin: 0;
+  background-color: coral;
 }
+
 
 * {
   box-sizing: border-box;
@@ -102,7 +104,7 @@ img {
 </style>
 <body>
 
-<h2 style="text-align:center">Slideshow Gallery</h2>
+<h2 style="text-align:center">Crab Pot Tracker</h2>
 
 <div class="container">
   <div class="mySlides">
