--- a/tele/tele.html
+++ b/tele/tele.html
@@ -20,6 +20,7 @@ img {
 /* Position the image container (needed to position the left and right arrows) */
 .container {
   position: relative;
+  width:50%;
 }
 
 /* Hide the images by default */
