--- a/tele/tele.html
+++ b/tele/tele.html
@@ -20,7 +20,8 @@ img {
 /* Position the image container (needed to position the left and right arrows) */
 .container {
   position: relative;
-  width:50%;
+  width:75%;
+  align: middle;
 }
 
 /* Hide the images by default */
