--- a/tele/tele.html
+++ b/tele/tele.html
@@ -25,7 +25,7 @@ img {
 .container {
   position: relative;
   width:75%;
-  align: middle;
+  align: center;
 }
 
 /* Hide the images by default */
