--- a/tele/tele.html
+++ b/tele/tele.html
@@ -140,7 +140,7 @@ img {
 
   <div class="mySlides">
     <div class="numbertext">6 / 6</div>
-    <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+    <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/HQgYpFO2eTw"></iframe>
   </div>
 
   <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -167,7 +167,7 @@ img {
       <img class="demo cursor" src="enclosure_thumb.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Enclosure">
     </div>
     <div class="column">
-      <img class="demo cursor" src="mountains.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video (skit and explanation)">
+      <img class="demo cursor" src="video_thumb.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video (skit and explanation)">
     </div>
 
   </div>
