--- a/tele/tele.html
+++ b/tele/tele.html
@@ -128,7 +128,7 @@ img {
     <img src="main_footprint.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides">
+  <!-- <div class="mySlides">
     <div class="numbertext">4 / 6</div>
     <img src="interface.jpg" style="width:100%">
   </div>
@@ -141,7 +141,7 @@ img {
   <div class="mySlides">
     <div class="numbertext">6 / 6</div>
     <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/HQgYpFO2eTw"></iframe>
-  </div>
+  </div> -->
 
   <a class="prev" onclick="plusSlides(-1)">❮</a>
   <a class="next" onclick="plusSlides(1)">❯</a>
@@ -160,7 +160,7 @@ img {
     <div class="column">
       <img class="demo cursor" src="main_footprint.jpg" style="width:100%" onclick="currentSlide(3)" alt="The Footprint">
     </div>
-    <div class="column">
+    <!-- <div class="column">
       <img class="demo cursor" src="interface.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Interface">
     </div>
     <div class="column">
@@ -168,7 +168,7 @@ img {
     </div>
     <div class="column">
       <img class="demo cursor" src="video_thumb.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video (skit and explanation)">
-    </div>
+    </div> -->
 
   </div>
 </div>
