--- a/tele/tele.html
+++ b/tele/tele.html
@@ -133,10 +133,10 @@ img {
     <img src="interface.jpg" style="width:100%">
   </div>
 
-  <!-- <div class="mySlides">
+  <div class="mySlides">
     <div class="numbertext">5 / 6</div>
     <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/iOL94ST_2S4"></iframe>
-  </div> -->
+  </div>
 
   <div class="mySlides">
     <div class="numbertext">6 / 6</div>
@@ -163,9 +163,9 @@ img {
     <div class="column">
       <img class="demo cursor" src="interface.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Interface">
     </div>
-    <!-- <div class="column">
+    <div class="column">
       <img class="demo cursor" src="enclosure_thumb.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Enclosure">
-    </div> -->
+    </div>
     <div class="column">
       <img class="demo cursor" src="video_thumb.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video (skit and explanation)">
     </div>
