--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
  <head>
   <title>This is my page title.</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -9,16 +9,16 @@
   <h1>Chelsea Starr</h1>
   <p>Objective Statement Objective Statement Objective Statement Objective Statement Objective Statement Objective Statement Objective Statement</p>
  </body>
-<html>
+<html> -->
 
 <!-- MAIN (Center website) -->
 <div class="main">
 
-<h1>MYLOGO.COM</h1>
+<h1>Chelsea Starr</h1>
 <hr>
 
 <h2>PORTFOLIO</h2>
-<p>Resize the browser window to see the responsive effect.</p>
+<p>Objective Statement Objective Statement Objective Statement Objective</p>
 
 <!-- Portfolio Gallery Grid -->
 <div class="row">
