--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!-- <html>
+<html>
  <head>
   <title>This is my page title.</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
  </head>
 
 
- <body>
+ <!-- <body>
   <h1>Chelsea Starr</h1>
   <p>Objective Statement Objective Statement Objective Statement Objective Statement Objective Statement Objective Statement Objective Statement</p>
- </body>
-<html> -->
+ </body> -->
+<html>
 
 <!-- MAIN (Center website) -->
 <div class="main">
