--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <div class="row">
   <div class="column">
     <div class="content">
-      <img src="mountains.jpg" alt="Mountains" style="width:100%">
-      <h3>My Work <a href="http://www.google.com">Link to Google</a></h3>
+      <img src="tele/board.jpg" alt="Mountains" style="width:100%">
+      <h3><href="tele/tele.html">Crab Pot Tracker</h3>
 
       <p>Lorem ipsum..</p>
     </div>
