--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <div class="column">
     <div class="content">
       <img src="tele/board.jpg" alt="Mountains" style="width:100%">
+      <h3>My Work <a href="tele/tele.html"> Link to Google</a></h3>
       <h3><href="tele/tele.html">Crab Pot Tracker</h3>
 
       <p>Lorem ipsum..</p>
