--- a/index.html
+++ b/index.html
@@ -15,18 +15,19 @@
 <div class="main">
 
 <h1>Chelsea Starr</h1>
+<p>Objective Statement Objective Statement Objective Statement Objective</p>
 <hr>
 
 <h2>PORTFOLIO</h2>
-<p>Objective Statement Objective Statement Objective Statement Objective</p>
+
 
 <!-- Portfolio Gallery Grid -->
 <div class="row">
   <div class="column">
     <div class="content">
       <img src="tele/board.jpg" alt="Mountains" style="width:100%">
-      <h3>My Work <a href="tele/tele.html"> Link to Google</a></h3>
-      <h3><href="tele/tele.html">Crab Pot Tracker</h3>
+      <h3>My Work <a href="tele/tele.html"> Crab Pot Tracker</a></h3>
+
 
       <p>Lorem ipsum..</p>
     </div>
