--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="column">
     <div class="content">
       <img src="tele/board.jpg" alt="Mountains" style="width:100%">
-      <h3>My Work <a href="tele/tele.html"> Crab Pot Tracker</a></h3>
+      <h3><a href="tele/tele.html"> Crab Pot Tracker</a></h3>
 
 
       <p>Lorem ipsum..</p>
@@ -36,7 +36,6 @@
     <div class="content">
       <img src="mountains.jpg" alt="Lights" style="width:100%">
       <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
     </div>
   </div>
   <div class="column">
