--- a/index.html
+++ b/index.html
@@ -35,21 +35,19 @@
   <div class="column">
     <div class="content">
       <img src="mountains.jpg" alt="Lights" style="width:100%">
-      <h3>My Work</h3>
+      <h3>Two Band Audio Visualizer</h3>
     </div>
   </div>
   <div class="column">
     <div class="content">
       <img src="mountains.jpg" alt="Nature" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
+      <h3>Matlab Sensor Calibration</h3>
     </div>
   </div>
   <div class="column">
     <div class="content">
       <img src="mountains.jpg" alt="Mountains" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum..</p>
+      <h3>HWeekend Fun</h3>
     </div>
   </div>
 </div>
