--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <h1>Chelsea Starr</h1>
 <p>Objective Statement Objective Statement Objective Statement Objective</p>
+<p href="resume.pdf" download>Resume</p>
 <hr>
 
 <h2>PORTFOLIO</h2>
