--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <h1>Chelsea Starr</h1>
 <p>Objective Statement Objective Statement Objective Statement Objective</p>
-<p href="resume.pdf" download>Resume</p>
+<!-- <p href="resume.pdf" download>Resume</p> -->
+<a href="resume.pdf" download>Link text</a>
 <hr>
 
 <h2>PORTFOLIO</h2>
@@ -28,9 +29,6 @@
     <div class="content">
       <img src="tele/board.jpg" alt="Mountains" style="width:100%">
       <h3><a href="tele/tele.html"> Crab Pot Tracker</a></h3>
-
-
-      <p>Lorem ipsum..</p>
     </div>
   </div>
   <div class="column">
