--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h1>Chelsea Starr</h1>
 <p>Objective Statement Objective Statement Objective Statement Objective</p>
 <!-- <p href="resume.pdf" download>Resume</p> -->
-<a href="resume.pdf" download>Link text</a>
+<a href="resume.pdf" download>Resume</a>
 <hr>
 
 <h2>PORTFOLIO</h2>
