--- a/audio/audio.html
+++ b/audio/audio.html
@@ -160,7 +160,7 @@ img {
       <img class="demo cursor" src="comparator.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Comparator">
     </div>
     <div class="column">
-      <img class="demo cursor" src="board.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video">
+      <img class="demo cursor" src="block.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video">
     </div>
 
   </div>
