--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   </div>
   <div class="column">
     <div class="content">
-      <img src="mountains.jpg" alt="Lights" style="width:100%">
-      <h3>Two Band Audio Visualizer</h3>
+      <img src="audio/block.html" alt="Lights" style="width:100%">
+      <h3><a href="audio/audio.html">Two Band Audio Visualizer</a></h3>
     </div>
   </div>
   <div class="column">
