--- a/audio/audio.html
+++ b/audio/audio.html
@@ -110,7 +110,7 @@ img {
 </style>
 <body>
 
-<h2 style="text-align:center">Crab Pot Tracker</h2>
+<h2 style="text-align:center">Two Band Audio Visualizer</h2>
 
 <div class="container">
   <div class="mySlides">
