--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   <div class="column">
     <div class="content">
-      <img src="audio/block.html" alt="Lights" style="width:100%">
+      <img src="audio/block.jpg" alt="Lights" style="width:100%">
       <h3><a href="audio/audio.html">Two Band Audio Visualizer</a></h3>
     </div>
   </div>
