--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="column">
     <div class="content">
       <img src="mountains.jpg" alt="Nature" style="width:100%">
-      <h3>Matlab Sensor Calibration</h3>
+      <h3><a href="sensor/sensor.html">Matlab Sensor Calibration</a></h3>
     </div>
   </div>
   <div class="column">
