--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="main">
 
 <h1>Chelsea Starr</h1>
-<p>Objective Statement Objective Statement Objective Statement Objective</p>
+<p>I am and electrical and computer engineering senior at Oregon State University. I am interested in embeded systems and am minoring in computer science. Expected graduation date is December 2020.</p>
 <!-- <p href="resume.pdf" download>Resume</p> -->
 <a href="resume.pdf" download>Resume</a>
 <hr>
@@ -46,7 +46,7 @@
   <div class="column">
     <div class="content">
       <img src="mountains.jpg" alt="Mountains" style="width:100%">
-      <h3>HWeekend Fun</h3>
+      <h3><a href="hweekend/hweekend.html">Hweekend</a></h3>
     </div>
   </div>
 </div>
