--- a/hweekend/hweekend.html
+++ b/hweekend/hweekend.html
@@ -110,16 +110,31 @@ img {
 </style>
 <body>
 
-<h2 style="text-align:center">Sensor Calibration with Matlab</h2>
+<h2 style="text-align:center">Two Band Audio Visualizer</h2>
 
 <div class="container">
   <div class="mySlides">
-    <div class="numbertext">1 / 2</div>
+    <div class="numbertext">1 / 5</div>
     <img src="block.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">2 / 2</div>
+    <div class="numbertext">2 / 5</div>
+    <img src="mic_amp.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">3 / 5</div>
+    <img src="filters.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">4 / 5</div>
+    <img src="comparator.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">5 / 5</div>
     <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/iOL94ST_2S4"></iframe>
   </div>
 
@@ -136,7 +151,16 @@ img {
       <img class="demo cursor" src="block.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Block Diagram">
     </div>
     <div class="column">
-      <img class="demo cursor" src="block.jpg" style="width:100%" onclick="currentSlide(2)" alt="The Video">
+      <img class="demo cursor" src="mic_amp.jpg" style="width:100%" onclick="currentSlide(2)" alt="The Mic and Amplifier">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="filters.jpg" style="width:100%" onclick="currentSlide(3)" alt="The Filters">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="comparator.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Comparator">
+    </div>
+    <div class="column">
+      <img class="demo cursor" src="block.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video">
     </div>
 
   </div>
