--- a/hweekend/hweekend.html
+++ b/hweekend/hweekend.html
@@ -110,32 +110,22 @@ img {
 </style>
 <body>
 
-<h2 style="text-align:center">Two Band Audio Visualizer</h2>
+<h2 style="text-align:center">Hweekend: Netbot</h2>
 
 <div class="container">
   <div class="mySlides">
-    <div class="numbertext">1 / 5</div>
+    <div class="numbertext">1 / 3</div>
+    <img src="netbot.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">2 / 3</div>
     <img src="block.jpg" style="width:100%">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">2 / 5</div>
-    <img src="mic_amp.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">3 / 5</div>
-    <img src="filters.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">4 / 5</div>
-    <img src="comparator.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">5 / 5</div>
-    <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/iOL94ST_2S4"></iframe>
+    <div class="numbertext">3 / 3</div>
+    <img src="hardware.jpg" style="width:100%">
   </div>
 
 
@@ -148,20 +138,15 @@ img {
 
   <div class="row">
     <div class="column">
-      <img class="demo cursor" src="block.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Block Diagram">
+      <img class="demo cursor" src="netbot.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Netbot">
     </div>
     <div class="column">
-      <img class="demo cursor" src="mic_amp.jpg" style="width:100%" onclick="currentSlide(2)" alt="The Mic and Amplifier">
+      <img class="demo cursor" src="block.jpg" style="width:100%" onclick="currentSlide(2)" alt="The Block Diagram">
     </div>
     <div class="column">
-      <img class="demo cursor" src="filters.jpg" style="width:100%" onclick="currentSlide(3)" alt="The Filters">
+      <img class="demo cursor" src="hardware.jpg" style="width:100%" onclick="currentSlide(3)" alt="The Hardware">
     </div>
-    <div class="column">
-      <img class="demo cursor" src="comparator.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Comparator">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="block.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video">
-    </div>
+
 
   </div>
 </div>
