--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
   </div>
   <div class="column">
     <div class="content">
-      <img src="mountains.jpg" alt="Nature" style="width:100%">
+      <img src="sensor/block.jpg" alt="Nature" style="width:100%">
       <h3><a href="sensor/sensor.html">Matlab Sensor Calibration</a></h3>
     </div>
   </div>
   <div class="column">
     <div class="content">
-      <img src="mountains.jpg" alt="Mountains" style="width:100%">
+      <img src="hweekend/netbot.jpg" alt="Mountains" style="width:100%">
       <h3><a href="hweekend/hweekend.html">Hweekend</a></h3>
     </div>
   </div>
