--- a/sensor/sensor.html
+++ b/sensor/sensor.html
@@ -120,7 +120,7 @@ img {
 
   <div class="mySlides">
     <div class="numbertext">2 / 2</div>
-    <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/iOL94ST_2S4"></iframe>
+    <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/R3GaipWTzn8"></iframe>
   </div>
 
 
@@ -136,7 +136,7 @@ img {
       <img class="demo cursor" src="block.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Block Diagram">
     </div>
     <div class="column">
-      <img class="demo cursor" src="block.jpg" style="width:100%" onclick="currentSlide(2)" alt="The Video">
+      <img class="demo cursor" src="video.jpg" style="width:100%" onclick="currentSlide(2)" alt="The Video">
     </div>
 
   </div>
