--- a/audio/audio.html
+++ b/audio/audio.html
@@ -135,7 +135,7 @@ img {
 
   <div class="mySlides">
     <div class="numbertext">5 / 5</div>
-    <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/iOL94ST_2S4"></iframe>
+    <iframe style="width:100%; height:100vh;" src="https://www.youtube.com/embed/4OUc6Gl9SD0"></iframe>
   </div>
 
 
@@ -160,7 +160,7 @@ img {
       <img class="demo cursor" src="comparator.jpg" style="width:100%" onclick="currentSlide(4)" alt="The Comparator">
     </div>
     <div class="column">
-      <img class="demo cursor" src="block.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video">
+      <img class="demo cursor" src="video.jpg" style="width:100%" onclick="currentSlide(5)" alt="The Video">
     </div>
 
   </div>
